Fixed width for status column to align cols when icon is not present

--- a/modules/st2-flex-table/style.less
+++ b/modules/st2-flex-table/style.less
@@ -209,6 +209,7 @@
   & &__status {
     font-size: 21px;
     line-height: 32px;
+    width: 52px;
 
     flex: initial;
 
